--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/semantic.min.css">
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/semantic.min.js"></script>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="https://jsotteccanic.github.io/entregAPP/manifest.json">
   <title>EntregAPP</title>
 </head>
 
