--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="ui raised very padded text container segment" style="margin-top: 10%;">
     <h2 class="ui header">EntregAPP
-      <img src="/images/icons/icon-512x512.png" alt="">
+      <img src="./images/icons/icon-512x512.png" alt="">
     </h2>
     <hr>
     <form class="ui form">
