--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <!-- <input type="file" id="file" > -->
         </div>
       </div>
-      <button id="btnEntregado" class="ui button" type="submit">Entregado</button>
+      <button id="btnEntregado" class="ui button" >Entregado</button>
     </form>
   </div>
   <script src="js/logica.js"></script>
