--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Weather PWA">
     <link rel="apple-touch-icon" href="./images/icons/icon-72x72.png">
- <!-- Add to home screen for Safari on windows -->
-    <meta name="msapplication-TileImage" content="./images/icons/icon-144x144.png">
+ <!-- Add to  windows -->
+    <meta name="msapplication-TileImage" content="./images/icons/icon-72x72.png">
     <meta name="msapplication-TileColor" content="#2F3BA2">
   <title>EntregAPP</title>
 </head>
