--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/semantic.min.js"></script>
   <link rel="manifest" href="./manifest.json">
-  <meta name="viewport" content="width=device-width">
-  <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="./images/icons/icon-192x192.png">
-    <!-- Add to home screen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Weather PWA">
-    <link rel="apple-touch-icon" href="./images/icons/icon-72x72.png">
- <!-- Add to  windows -->
-    <meta name="msapplication-TileImage" content="./images/icons/icon-72x72.png">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
+
+  <!-- Add to home screen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Weather PWA">
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+  <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#2F3BA2">
+
   <title>EntregAPP</title>
 </head>
 
 <body>
-  <div class="ui raised very padded text container segment" style="margin-top: 10%;">
+  <div class="ui raised very padded text container segment" style="margin-top: 7%;">
     <h2 class="ui header">EntregAPP
-      <img src="./images/icons/icon-512x512.png" alt="">
+      <img src="./images/icons/icon-192x192.png" alt="">
     </h2>
     <hr>
     <form class="ui form">
@@ -40,9 +38,15 @@
             <i class="camera icon"></i> Verificar
           </label>
           <input type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput" style="display:none">
+        </div>
+        <!-- contenedor de img -->
+        <div class="ui segment">
+            <img id="imgShow" class="ui centered medium image" src="" alt="" style="height: 100px; width: 100px;">
+        </div>
+        
+        <hr>
       </div>
-      </div>
-      <button id="btnEntregado" class="ui button" >Entregado</button>
+      <button id="btnEntregado" class="fluid ui button">Entregado</button>
     </form>
   </div>
   <script src="js/logica.js"></script>
