usuario y contraseña pre definido

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <form class="ui form">
         <div class="field">
           <label>Correo</label>
-          <input type="text" id="correo" name="first-name" placeholder="Correo">
+          <input type="text" id="correo" name="first-name" placeholder="Correo" value="personal@lyr.com">
         </div>
         <div class="field">
           <label>Contraseña</label>
-          <input type="password" id="password" name="last-name" placeholder="Contraseña">
+          <input type="password" id="password" name="last-name" placeholder="Contraseña" value='personal1'>
         </div>
         <div class="ui button fluid green" id="btnIniciar">Ingresar</div>
       </form>
