--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <!-- contenedor de img -->
         <div class="ui segment" id="imgContainer">
-            <div class='ui text loader'>Loading</div>
+            <div class='ui text loader'>Cargando</div>
           <img id="imgShow" class="ui centered medium image" alt="" style="height: 100px; width: 100px;">
         </div>
         <hr>
