Registro de entrega

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta name="msapplication-TileColor" content="#2F3BA2">
   <!-- firebase -->
   <script src="js/firebase.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-firestore.js"></script> -->
   <!-- titulo -->
   <title>EntregAPP</title>
 </head>
@@ -26,7 +27,7 @@
 <body>
   <a href="" id="salir">Salir</a>
   <div class="ui raised very padded text container segment active" style="margin-top: 7%;">
-    
+
     <h2 class="ui header">EntregAPP
       <img src="./images/icons/icon-192x192.png" alt="">
     </h2>
