--- a/registro.html
+++ b/registro.html
@@ -19,11 +19,11 @@
         <img class="logo" src="images/icons/icon-152x152.png"> EntregAPP
       </a>
       <div class="ui simple dropdown item">
-        Opciones
+        Menu
         <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item" href="#">Link Item</a>
-          <a class="item" href="#">Link Item</a>
+          <a class="item" href="#">Registrar</a>
+          <a class="item" href="#">Reporte</a>
         </div>
       </div>
     </div>
@@ -63,29 +63,33 @@
             <select id='asignar' name='asignar' placeholder="Seleccione">
             </select>
           </div>
-          <button class="ui button green">Guardar</button>
+          <button class="ui button green" onclick="guardar(event);">Guardar</button>
         </form>
       </div>
-      <!-- <div class="column">
-        <table class="ui table">
-          <thead>
-            <th>Nro</th>
-            <th>Nombre</th>
-            <th>Dirección</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>01</td>
-              <td>Carlos</td>
-              <td>Pedro</td>
-            </tr>
-          </tbody>
-        </table>
+      <!-- <div class="eleven wide column">
+        
+          <h1 class="ui dividing header">Registro:</h1>
+          <table class="ui table">
+            <thead>
+              <th>DOC</th>
+              <th>DESTINATARIO</th>
+              <th>DESTINO</th>
+              <th>DESTINO</th>
+              <th>Dirección</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>01</td>
+                <td>Carlos</td>
+                <td>Pedro</td>
+              </tr>
+            </tbody>
+          </table>
       </div> -->
 
     </div>
   </div>
-
+  <script src="js/registro.js"></script>
 </body>
 
 </html>
