--- a/reporte.html
+++ b/reporte.html
@@ -22,8 +22,8 @@
                 Menu
                 <i class="dropdown icon"></i>
                 <div class="menu">
-                    <a class="item" href="#">Registrar</a>
-                    <a class="item" href="#">Reporte</a>
+                    <a class="item" href="./registro.html">Registrar</a>
+                    <a class="item" href="./reporte.html">Reporte</a>
                 </div>
             </div>
         </div>
