--- a/registro.html
+++ b/registro.html
@@ -55,6 +55,10 @@
             <input type="date" name="fechaRecojo" id="fechaRecojo" placeholder="Fecha de recojo">
           </div>
           <div class="field">
+              <label for="ordenServicio">Orden de servicio</label>
+              <input type="text" name="ordenServicio" id="ordenServicio" placeholder="Guia de remision">
+            </div>
+          <div class="field">
             <label for="guiaRemision">Guia de remisión</label>
             <input type="text" name="guiaRemision" id="guiaRemision" placeholder="Guia de remision">
           </div>
