--- a/reporte.html
+++ b/reporte.html
@@ -42,7 +42,7 @@
                         <th>FECHA ENT</th>
                         <th>FECHA RECOJ</th>
                         <th>GUIA REMI</th>
-                        <th>RECIBIDO</th>
+                        <th>ENTREGADO</th>
                         <th>FIRMA</th>
                     </thead>
                     <tbody id='tbReporte'>
