--- a/cliente.html
+++ b/cliente.html
@@ -19,14 +19,14 @@
                 <img class="logo" src="images/icons/icon-152x152.png"> EntregAPP
             </a>
             REPORTE DE ENTREGAS
-            <!-- <div class="ui simple dropdown item">
+            <div class="ui simple dropdown item">
                 Menu
                 <i class="dropdown icon"></i>
                 <div class="menu">
-                    <a class="item" href="./registro.html">Registrar</a>
-                    <a class="item" href="./reporte.html">Reporte</a>
+                    <a class="item" href="#" onclick="cerrarSessionCliente(event);">Salir</a>
+                    <!-- <a class="item" href="./reporte.html">Reporte</a> -->
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
     <div class="ui container">
