--- a/registro.html
+++ b/registro.html
@@ -39,12 +39,7 @@
           </div>
           <div class="field">
             <label for='destino'>Destino</label>
-            <select id='destino' name='destino' placeholder="Seleccione">
-              <option value="">Selecciones</option>
-              <option value="Lima">Lima</option>
-              <option value="Trujillo">Trujillo</option>
-              <option value="Piura">Piura</option>
-            </select>
+            <imput type="text" id='destino' name='destino' placeholder="Lima - San Borja - Detalle de la dirección">
           </div>
           <div class="field">
             <label for="documento">Documento</label>
