--- a/cliente.html
+++ b/cliente.html
@@ -10,7 +10,12 @@
     <script src="js/semantic.min.js"></script>
     <script src="js/firebase.js"></script>
     <link rel="stylesheet" href="css/semantic.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css">
 
 <body>
     <div class="ui inverted menu">
@@ -34,7 +39,7 @@
             <div class="column">
 
                 <h1 class="ui dividing header">Registro:</h1>
-                <table class="ui table">
+                <table id="example" class="ui table">
                     <thead>
                         <th>O.S</th>
                         <th>DOC</th>
