--- a/registro.html
+++ b/registro.html
@@ -39,7 +39,7 @@
           </div>
           <div class="field">
             <label for='destino'>Destino</label>
-            <imput type="text" id='destino' name='destino' placeholder="Lima - San Borja - Detalle de la dirección">
+            <input type="text" name="destino" id='destino' placeholder="Lima - San Borja - Detalle de la dirección">
           </div>
           <div class="field">
             <label for="documento">Documento</label>
@@ -50,9 +50,9 @@
             <input type="date" name="fechaRecojo" id="fechaRecojo" placeholder="Fecha de recojo">
           </div>
           <div class="field">
-              <label for="ordenServicio">Orden de servicio</label>
-              <input type="text" name="ordenServicio" id="ordenServicio" placeholder="Guia de remision">
-            </div>
+            <label for="ordenServicio">Orden de servicio</label>
+            <input type="text" name="ordenServicio" id="ordenServicio" placeholder="Guia de remision">
+          </div>
           <div class="field">
             <label for="guiaRemision">Guia de remisión</label>
             <input type="text" name="guiaRemision" id="guiaRemision" placeholder="Guia de remision">
